--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <!-- Open Graph (Facebook) -->
     <meta property="og:title" content="Magische Wünsche">
     <meta property="og:description" content="Warnung: Dieser Inhalt ist exklusiv">
-    <meta property="og:image" content="https://i.postimg.cc/fTB02dcz/m61as7bss.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/T1cdm156/2lt2z8sg5.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <meta property="og:url" content="https://ihredomain2.com">
+    <meta property="og:url" content="https://ihredoma1n5s.com">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Magische Wünsche">
 
